--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 	<main>
 		<section id="about">
 			<h2>About the Mentorship Program</h2>
-			<p>Our campus mentorship program pairs experienced students with incoming students to help them navigate campus life, develop important skills, and achieve their goals. Mentors and mentees meet regularly throughout the academic year to discuss a range of topics and build a supportive relationship.</p>
-            <iframe src="https://www.youtube.com/embed/hxTrEytzBzo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>           
+            <p>As Computer Science students at the University of Eldoret, we take pride in offering a robust mentorship program that matches experienced students with incoming students.</p>
+            <iframe id="mentorship-video" name="mentorship-video" src="https://www.youtube.com/embed/hxTrEytzBzo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <label for="mentorship-video">Computer Science students get to learn more about Comuter Science from one of our Mentors</label>
+            <p>Our program is specially designed to assist new students to navigate their way through campus life, develop essential skills, and reach their goals. Our mentors and mentees meet regularly throughout the academic year to discuss various topics and establish a supportive relationship that lasts beyond the program's duration. We firmly believe that this mentorship program is a vital part of the University of Eldoret's experience. As a result, we are committed to providing our students with the guidance and support they require to excel in their studies and future careers.</p>           
 		</section>
 		<section id="team">
 			<h2>The Mentorship Team</h2>
