--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus Mentorship Program</title>
+    <title>UOELD Mentor Match</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681131431/mortarboard_hsgpww.png" type="image/x-icon">
 </head>
