--- a/application-form.html
+++ b/application-form.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus Mentorship Program</title>
+    <title>UOELD Mentor Match</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681131431/mortarboard_hsgpww.png" type="image/x-icon">
 </head>
 <body>
+    <header>
+        <div class="nav container">
+            <input type="checkbox" id="nav-check">
+            <div class="nav-header">
+              <div class="nav-title"><a href="/mentorship.html"><img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681131431/mortarboard_hsgpww.png" alt=""> Mentor Match</a></div>
+            </div>
+            <div class="nav-btn">
+              <label for="nav-check">
+                <span></span>
+                <span></span>
+                <span></span>
+              </label>
+            </div>
+            <div class="nav-links">
+                <a href="index.html#about" onclick="closeNav()">about</a>
+                <a href="index.html#team" onclick="closeNav()">team</a>
+                <a href="index.html#program" onclick="closeNav()">program</a>
+                <a href="index.html#testimonials" onclick="closeNav()">refs</a>
+                <a href="index.html#apply" onclick="closeNav()">apply</a>
+                <a href="index.html#faq" onclick="closeNav()">FAQ</a>
+            </div>
+        </div>
+    </header>
     <form action="" method="">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
