--- a/application-form.html
+++ b/application-form.html
@@ -13,7 +13,7 @@
         <div class="nav container">
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
-              <div class="nav-title"><a href="/mentorship.html"><img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681131431/mortarboard_hsgpww.png" alt=""> Mentor Match</a></div>
+              <div class="nav-title"><a href="/"><img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681131431/mortarboard_hsgpww.png" alt=""> Mentor Match</a></div>
             </div>
             <div class="nav-btn">
               <label for="nav-check">
