--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
 			<h2>The Mentorship Team</h2>
 			<div id="team-div">
                 <div class="mentor">
-                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681129390/avatar_j0jxyj.png" alt="Mentor 1">
-                    <h3>Shikuku Emmanuel</h3>
+                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681145545/user_khrejy.png" alt="Mentor 1">
+                    <h3>E. Shikuku</h3>
                     <p>Lead Mentor</p>
                 </div>
                 <div class="mentor">
-                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681129390/avatar_j0jxyj.png" alt="Mentor 2">
-                    <h3>Jane Doe</h3>
+                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681145545/user_khrejy.png" alt="Mentor 2">
+                    <h3>Its Foss</h3>
                     <p>Mentor</p>
                 </div>
                 <div class="mentor">
-                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681129390/avatar_j0jxyj.png" alt="Mentor 3">
-                    <h3>Bob Johnson</h3>
+                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681145545/user_khrejy.png" alt="Mentor 3">
+                    <h3>Sheilah</h3>
                     <p>Mentor</p>
                 </div>
                 <div class="mentor">
-                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681129390/avatar_j0jxyj.png" alt="Mentor 3">
-                    <h3>Bob Johnson</h3>
+                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681145545/user_khrejy.png" alt="Mentor 3">
+                    <h3>Naftali</h3>
                     <p>Mentor</p>
                 </div>
             </div>
@@ -68,10 +68,10 @@
 		<section id="program">
 			<h2>The Mentorship Program</h2>
 			<p>Mentors and mentees meet once a week for an hour to discuss a range of topics, including study skills, time management, and goal setting. In addition, there are monthly events and workshops that allow mentors and mentees toconnect with other program participants and learn from guest speakers.</p>
-            <p>To apply to become a mentor or mentee, fill out our online application form and attend our program orientation session. Applications are accepted on a rolling basis, and we encourage interested students to apply as soon as possible.</p>
             <audio controls>
                 <source src="https://drive.google.com/uc?export=download&id=1Rmx3s0efmkCNSKh_RRpXUxry_VPR0dYs" type="audio/mp3">
             </audio>
+            <p>To apply to become a mentor or mentee, fill out our online application form and attend our program orientation session. Applications are accepted on a rolling basis, and we encourage interested students to apply as soon as possible.</p>
         </section>
         <section id="testimonials">
             <h2>Testimonials</h2>
