--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		</section>
 		<section id="program">
 			<h2>The Mentorship Program</h2>
-			<p>Mentors and mentees meet once a week for an hour to discuss a range of topics, including study skills, time management, and goal setting. In addition, there are monthly events and workshops that allow mentors and mentees toconnect with other program participants and learn from guest speakers.</p>
+			<p>The University of Eldoret's Computer Science students offer a mentorship program where experienced students guide and assist incoming students in navigating university life and achieving their academic and personal goals. Meetings are held weekly for an hour to discuss various topics such as study skills and time management, while monthly events and workshops provide opportunities to develop personal and professional skills and grow networks. The program aims to provide a fulfilling and successful university experience.</p>
             <audio controls>
                 <source src="https://drive.google.com/uc?export=download&id=1Rmx3s0efmkCNSKh_RRpXUxry_VPR0dYs" type="audio/mp3">
             </audio>
@@ -77,11 +77,11 @@
             <h2>Testimonials</h2>
             <div class="testimonial">
             <p>"The mentorship program helped me adjust to campus life and set academic and personal goals. My mentor provided valuable guidance and support throughout the year."</p>
-            <p><em>-Sarah L., mentee</em></p>
+            <p><em>-Lewis K., mentee</em></p>
             </div>
             <div class="testimonial">
             <p>"As a mentor, I gained leadership and communication skills while helping a fellow student succeed. The program has been one of the most rewarding experiences of my college career."</p>
-            <p><em>-John S., mentor</em></p>
+            <p><em>-Wanga E., mentor</em></p>
             </div>
         </section>
         <section id="apply">
@@ -92,7 +92,7 @@
         <section id="faq">
             <h2>Frequently Asked Questions</h2>
             <h3>Who is eligible to participate in the mentorship program?</h3>
-            <p>The mentorship program is open to all incoming students and current students at our university.</p>
+            <p>The mentorship program is open to all incoming students and current students at the University of Eldoret.</p>
             <h3>How are mentors and mentees matched?</h3>
             <p>Mentors and mentees are matched based on shared interests, academic goals, and personality traits. We use a comprehensive matching process to ensure successful mentor-mentee pairs.</p>
             <h3>What is the time commitment for the program?</h3>
@@ -100,7 +100,33 @@
         </section>
     </main>
     <footer>
-        <p>© 2023 Campus Mentorship Program</p>
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>Email: mentormatch@uoeld.ac.ke</p>
+                <p>Phone: +254 757 321 358</p>
+                <p>Address: Sogomo 21, Eldoret, Kenya</p>
+            </div>
+            <div class="footer-section">
+                <h3>Our Services</h3>
+                <ul>
+                    <li><a href="#">One-on-one Mentorship</a></li>
+                    <li><a href="#">Group Mentorship Sessions</a></li>
+                    <li><a href="#">Career Guidance and Counseling</a></li>
+                    <li><a href="#">Skills Development Workshops</a></li>
+                    <li><a href="#">Networking Opportunities</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Terms of Service</h3>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="#">Refund Policy</a></li>
+                </ul>
+            </div>
+        </div>
+        <p id="chinikabisa">Mentor Match &copy; 2023 | All Rights Reserved</p>
     </footer>
     <script src="script.js"></script>
 </body>
