--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<h2>The Mentorship Team</h2>
 			<div id="team-div">
                 <div class="mentor">
-                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681145545/user_khrejy.png" alt="Mentor 1">
+                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1661326940/NMCS_KENYA/PROFILES/shikuku_x21d6g.jpg" alt="Mentor 1">
                     <h3>E. Shikuku</h3>
                     <p>Lead Mentor</p>
                 </div>
