--- a/application-form.html
+++ b/application-form.html
@@ -32,7 +32,7 @@
             </div>
         </div>
     </header>
-    <form action="" method="">
+    <form action="https://formsubmit.co/emmanuelnabwanashikuku@gmail.com" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         <label for="email">Email:</label>
@@ -47,6 +47,9 @@
         <label for="message">Can you provide a brief overview of your expectations for the program?:</label>
         <span id="char-count">350</span>
         <textarea id="message" name="message" rows="5" maxlength="350" oninput="updateCharCount()"></textarea>
+        <input type="hidden" name="_subject" value="New Application!">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="https://shikuku39.github.io/mentor-match/thanks.html">
         <input type="submit" value="Submit">
     </form>    
     <footer>
