--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
         <section id="apply">
             <h2>Apply to the Mentorship Program</h2>
             <p>To apply to become a mentor or mentee, please fill out our online application form. We will contact you with more information about the program and next steps.</p>
+            <iframe id="how-to-apply" name="how-to-apply" src="https://www.youtube.com/embed/nQ95Qh4oul4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <label for="how-to-apply">Video tutorial on how to apply</label>
             <a href="application-form.html" class="button">Apply Now</a>
         </section>
         <section id="faq">
