--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p>Mentor</p>
                 </div>
                 <div class="mentor">
-                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681145545/user_khrejy.png" alt="Mentor 3">
+                    <img src="https://res.cloudinary.com/dlkqilyi0/image/upload/v1681229180/IMG_20230411_083134_ceqrno.jpg" id="mentor-3" alt="Mentor 3">
                     <h3>Sheilah</h3>
                     <p>Mentor</p>
                 </div>
