--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		</section>
 		<section id="program">
 			<h2>The Mentorship Program</h2>
-			<p>The University of Eldoret's Computer Science students offer a mentorship program where experienced students guide and assist incoming students in navigating university life and achieving their academic and personal goals. Meetings are held weekly for an hour to discuss various topics such as study skills and time management, while monthly events and workshops provide opportunities to develop personal and professional skills and grow networks. The program aims to provide a fulfilling and successful university experience.</p>
+			<p>The University of Eldoret's Computer Science students offer a mentorship program where experienced students guide and assist incoming students in navigating university life and achieving their academic and personal goals. Meetings are held online weekly for an hour to discuss various topics such as study skills and time management, while monthly events and workshops provide opportunities to develop personal and professional skills and grow networks. The program aims to provide a fulfilling and successful university experience.</p>
             <audio controls>
                 <source src="https://drive.google.com/uc?export=download&id=1Rmx3s0efmkCNSKh_RRpXUxry_VPR0dYs" type="audio/mp3">
             </audio>
